syntax = "proto3";
package proto;
option go_package = "proto/proto";

message Undef {}

message Task{
	int32 id = 1;
	double arg1 = 2;
	double arg2 = 3;
	string operation = 4;
	int32 OperationTime = 5;
}

message TaskResult{
	int32 id = 1;
	double result = 2;
	bool success =3;
}

// Определение сервиса 
service AsyncCalculatorService {
	rpc GetTask(Undef) returns (Task); 
	rpc PostTaskResult(TaskResult) returns (Undef); 
}